# firesync

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CONTRIBUTING.md  README.md  firestore_apply.py  firestore_env.py  firestore_init.py  firestore_plan.py  firestore_pull.py  firesync  pyproject.toml  setup.py
.githooks/: README.md  pre-commit
.github/workflows/: pipeline.yml
core/: cli.py  config.py  operations.py  workspace.py
src/: __init__.py  __main__.py  cli.py  config.py  firesync_cli.py  gcloud.py  logger.py  operations.py  workspace.py
src/commands/: __init__.py  apply.py  env.py  init.py  plan.py  pull.py
src/core/: __init__.py  cli.py  config.py  gcloud.py
src/firesync/: __init__.py  __main__.py  cli.py  config.py  gcloud.py  logger.py  main.py  operations.py  schema.py  ui.py  workspace.py
src/firesync/commands/: apply.py  env.py  init.py  plan.py  pull.py
tests/: __init__.py  test_apply.py  test_cli.py  test_config.py  test_env_management.py  test_firestore_init.py  test_normalizers.py  test_operations.py  test_schema.py  test_workspace.py
tests/commands/: __init__.py  test_apply.py  test_env.py  test_init.py
