[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firesync"
version = "0.1.0.dev1"
description = "Infrastructure as Code for Google Cloud Firestore"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Pavel Ravvich"}
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PavelRavvich/firesync"
Repository = "https://github.com/PavelRavvich/firesync"

[project.scripts]
firesync = "firesync.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
